# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../uhdf.gni")
group("uhdf_sec_pkg") {
  deps = [ ":libhdf_sec" ]
}

hdf_uhdf_path = "./.."
hdf_framework_path = "./../../../framework"

ohos_shared_library("libhdf_sec") {
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "$hdf_framework_path/include",
    "$hdf_framework_path/include/osal",
    "$hdf_framework_path/include/utils",
    "$hdf_framework_path/core/sec/include",
    "$hdf_framework_path/include/platform",
    "$hdf_uhdf_path/security/include",
  ]

  sources = [ "src/hdf_security.c" ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "$hdf_uhdf_path/pal:libhdf_pal",
    "$hdf_uhdf_path/utils:libhdf_utils",
  ]

  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "hdf_core"
}
