# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  hdf_core_khdf_test_support = true
  hdf_core_platform_test_support = false
}

if (hdf_core_khdf_test_support) {
  group("hdf_test_uhdf") {
    testonly = true
    deps = [
      "./../../../framework/test/fuzztest:hdf_framework_fuzztest",
      "fuzztest:hdf_platform_test",
      "unittest/config:hdf_adapter_uhdf_test_config",
      "unittest/load_vdi:hdf_load_vdi_test",
      "unittest/load_vdi:libvdi_sample1_driver",
      "unittest/load_vdi:libvdi_sample1_symbol",
      "unittest/load_vdi:libvdi_sample2_driver",
      "unittest/manager:hdf_adapter_uhdf_test_core_shared",
      "unittest/manager:hdf_adapter_uhdf_test_ioservice",
      "unittest/manager:hdf_adapter_uhdf_test_manager",
      "unittest/manager:hdf_adapter_uhdf_test_pm",
      "unittest/manager:hdf_adapter_uhdf_test_remote_adapter",
      "unittest/manager:hdf_adapter_uhdf_test_sbuf",
      "unittest/manager:hdf_adapter_uhdf_test_uevent",
      "unittest/osal:hdf_adapter_uhdf_test_osal",
      "unittest/osal:hdf_adapter_uhdf_test_osal_posix",
      "unittest/platform/i2c:ui2c_test",
    ]
    if (hdf_core_platform_test_support) {
      deps += [ "unittest/platform:hdf_adapter_uhdf_test_platform" ]
    }
  }
} else {
  group("hdf_test_uhdf") {
    testonly = true
    deps = [
      "./../../../framework/test/fuzztest:hdf_framework_fuzztest",
      "fuzztest:hdf_platform_test",
      "unittest/load_vdi:hdf_load_vdi_test",
      "unittest/load_vdi:libvdi_sample1_driver",
      "unittest/load_vdi:libvdi_sample1_symbol",
      "unittest/load_vdi:libvdi_sample2_driver",
      "unittest/manager:hdf_adapter_uhdf_test_core_shared",
      "unittest/manager:hdf_adapter_uhdf_test_remote_adapter",
      "unittest/manager:hdf_adapter_uhdf_test_sbuf",
      "unittest/osal:hdf_adapter_uhdf_test_osal_posix",
    ]
  }
}
