# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hisysevent_c_wrapper") {
  include_dirs = [
    "./include",
    "../../../interfaces/native/innerkits/hisysevent/include",
    "../../../interfaces/native/innerkits/hisysevent_manager/include",
  ]

  sources = [
    "./source/hisysevent_c_wrapper.cpp",
    "./source/hisysevent_rust_listener.cpp",
    "./source/hisysevent_rust_manager.cpp",
    "./source/hisysevent_rust_querier.cpp",
  ]

  deps = [
    "../../../interfaces/native/innerkits/hisysevent:libhisysevent",
    "../../../interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  output_extension = "so"

  part_name = "hisysevent"
  subsystem_name = "hiviewdfx"
}
