# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_rust_shared_library("hisysevent_rust") {
  sources = [
    "src/lib.rs",
    "src/macros.rs",
    "src/sys_event.rs",
    "src/sys_event_manager.rs",
    "src/utils.rs",
  ]

  deps = [
    "../../../frameworks/native/c_wrapper:hisysevent_c_wrapper",
    "../../native/innerkits/hisysevent:libhisysevent",
    "../../native/innerkits/hisysevent_manager:libhisyseventmanager",
  ]

  crate_name = "hisysevent"
  crate_type = "dylib"
  rustflags = [ "-Zstack-protector=all" ]

  part_name = "hisysevent"
  subsystem_name = "hiviewdfx"
}
