# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hisysevent/hisysevent_rust"

ohos_rust_unittest("rust_hisysevent_test") {
  module_out_path = module_output_path

  sources = [ "src/main.rs" ]

  deps = [ "../../../interfaces/rust/innerkits:hisysevent_rust" ]

  part_name = "hisysevent"
  subsystem_name = "hiviewdfx"
}
